Popup and not popup calendar implemented. Current date or latest date what not contains log setting added. First check the the last one week. Setting page added. Now edit worklog date works. i18n added new strings.

--- a/src/main/resources/i18n/jttp_en.properties
+++ b/src/main/resources/i18n/jttp_en.properties
@@ -28,7 +28,9 @@ plugin.end= End
 plugin.duration= Duration
 plugin.note= Note
 plugin.edit= Edit
+plugin.edit.all=Edit All
 plugin.save= Save
+plugin.settings= Settings
 plugin.delete= Delete
 plugin.add.worklog= Add Worklog
 plugin.start.time= Start Time
