--- a/src/main/resources/i18n/jttp_hu.properties
+++ b/src/main/resources/i18n/jttp_hu.properties
@@ -28,7 +28,9 @@ plugin.end= V\u00e9ge
 plugin.duration= Id\u0151tartam
 plugin.note= Jegyzet
 plugin.edit= Szerkeszt\u00e9s
+plugin.edit.all=\u00d6sszes Szerkeszt\u00e9s
 plugin.save= Ment\u00e9s
+plugin.settings= Be\u00e1ll\u00edt\u00e1sok
 plugin.delete= T\u00f6rl\u00e9s
 plugin.add.worklog= Worklog Hozz\u00e1ad\u00e1sa
 plugin.start.time= Kezd\u00e9si id\u0151
