Added filtered summary function.

--- a/src/main/resources/i18n/jttp_en.properties
+++ b/src/main/resources/i18n/jttp_en.properties
@@ -40,6 +40,13 @@ plugin.submit= Submit
 plugin.submit.close= Submit and Close
 plugin.cancel= Cancel
 plugin.now= Now
+plugin.filtered= Filtered
+
+plugin.personal.settings= The personal settings of the plugin.
+plugin.admin.settings= The global settings of the plugin.
+plugin.setting.ispopup= Popup Calendar
+plugin.setting.isactualdate= Calendar default show actual date
+plugin.setting.filtered.issues= The summary filters
 
 plugin.no.worklogs= No data to display!
 plugin.invalid_startTime= Invalid Start Time!
