--- a/src/main/resources/i18n/jttp_hu.properties
+++ b/src/main/resources/i18n/jttp_hu.properties
@@ -40,6 +40,13 @@ plugin.submit= Hozz\u00e1ad\u00e1s
 plugin.submit.close= Ment\u00e9s \u00e9s Bez\u00e1r\u00e1s
 plugin.cancel= M\u00e9gse
 plugin.now= Most
+plugin.filtered= Sz\u0171rt
+
+plugin.personal.settings= A plugin szem\u00e9lyes be\u00e1ll\u00edt\u00e1sai.
+plugin.admin.settings= A plugin glob\u00e1lis be\u00e1ll\u00edt\u00e1sai.
+plugin.setting.ispopup= Felugr\u00f3 kalend\u00e1r
+plugin.setting.isactualdate= Aktu\u00e1lis d\u00e1tum mutat\u00e1sa alap\u00e9rtelmezetten
+plugin.setting.filtered.issues= Az \u00f6sszes\u00edt\u00e9s sz\u0171r\u0151 felt\u00e9telei
 
 plugin.no.worklogs= Nincs megjelen\u00edtend\u0151 adat!
 plugin.invalid_startTime= \u00c9rv\u00e9nytelen kezd\u00e9si id\u0151!
