Added Missing Days tab.

--- a/src/main/resources/i18n/jttp_en.properties
+++ b/src/main/resources/i18n/jttp_en.properties
@@ -41,6 +41,10 @@ plugin.submit.close= Submit and Close
 plugin.cancel= Cancel
 plugin.now= Now
 plugin.filtered= Filtered
+plugin.dates= Dates
+plugin.search= Search
+plugin.from= From 
+plugin.to= To
 
 plugin.personal.settings= The personal settings of the plugin.
 plugin.admin.settings= The global settings of the plugin.
@@ -48,6 +52,8 @@ plugin.setting.ispopup= Popup Calendar
 plugin.setting.isactualdate= Calendar default show actual date
 plugin.setting.filtered.issues= The summary filters
 
+plugin.statistics.message= The number of the dates what the query found: 
+plugin.no.dates= No date to display!
 plugin.no.worklogs= No data to display!
 plugin.invalid_startTime= Invalid Start Time!
 plugin.invalid_endTime= Invalid End Time!
@@ -60,6 +66,7 @@ plugin.nopermission_issue= You don't have permission to the issue:
 plugin.worklog.create.fail= Unsuccessful worklog creation.
 plugin.worklog.delete.fail= Can't delete worklog with this ID:
 plugin.worklog.update.fail= Unsuccessful worklog update.
+plugin.worng.dates= The date parameters of the query are not set appropriate.
 
 plugin.worklog.update.success= Success worklog update.
 plugin.worklog.create.success= Success worklog create.
