--- a/src/main/resources/i18n/jttp_hu.properties
+++ b/src/main/resources/i18n/jttp_hu.properties
@@ -41,6 +41,10 @@ plugin.submit.close= Ment\u00e9s \u00e9s Bez\u00e1r\u00e1s
 plugin.cancel= M\u00e9gse
 plugin.now= Most
 plugin.filtered= Sz\u0171rt
+plugin.dates= D\u00e1tumok
+plugin.search= Keres\u00e9s
+plugin.from= Innent\u0151l 
+plugin.to= Id\u00e1ig
 
 plugin.personal.settings= A plugin szem\u00e9lyes be\u00e1ll\u00edt\u00e1sai.
 plugin.admin.settings= A plugin glob\u00e1lis be\u00e1ll\u00edt\u00e1sai.
@@ -48,6 +52,8 @@ plugin.setting.ispopup= Felugr\u00f3 kalend\u00e1r
 plugin.setting.isactualdate= Aktu\u00e1lis d\u00e1tum mutat\u00e1sa alap\u00e9rtelmezetten
 plugin.setting.filtered.issues= Az \u00f6sszes\u00edt\u00e9s sz\u0171r\u0151 felt\u00e9telei
 
+plugin.statistics.message= A lek\u00e9r\u00e9s \u00e1lltal tal\u00e1lt d\u00e1tumok darabsz\u00e1ma: 
+plugin.no.dates= Nincs megjelen\u00edtend\u0151 d\u00e1tum!
 plugin.no.worklogs= Nincs megjelen\u00edtend\u0151 adat!
 plugin.invalid_startTime= \u00c9rv\u00e9nytelen kezd\u00e9si id\u0151!
 plugin.invalid_endTime= \u00c9rv\u00e9nytelen v\u00e9gz\u00e9si id\u0151!
@@ -60,6 +66,7 @@ plugin.nopermission_issue= Nincs jogosults\u00e1god az issue-hoz:
 plugin.worklog.create.fail= Sikertelen worklog k\u00e9sz\u00edt\u00e9s.
 plugin.worklog.delete.fail= Nem siker\u00fclt t\u00f6r\u00f6lni a worklogot a k\u00f6vetkez\u0151 ID-val:
 plugin.worklog.update.fail= Sikertelen worklog friss\u00edt\u00e9s.
+plugin.worng.dates= A lek\u00e9r\u00e9s d\u00e1tum param\u00e9terei nem megfelel\u0151ek.
 
 plugin.worklog.update.success= Sikeres worklog szerkeszt\u00e9s.
 plugin.worklog.create.success= Sikeres worklog k\u00e9sz\u00edt\u00e9s.
