Fixed non working issues texts in settings and jttp vm. added default non working issues from properties file

--- a/src/main/resources/i18n/jttp_en.properties
+++ b/src/main/resources/i18n/jttp_en.properties
@@ -40,17 +40,18 @@ plugin.submit= Submit
 plugin.submit.close= Submit and Close
 plugin.cancel= Cancel
 plugin.now= Now
-plugin.filtered= Filtered
+plugin.real.work= Real Work
 plugin.dates= Dates
 plugin.search= Search
 plugin.from= From 
 plugin.to= To
+plugin.reset = Reset
 
 plugin.personal.settings= The personal settings of the plugin.
 plugin.admin.settings= The global settings of the plugin.
 plugin.setting.ispopup= Popup Calendar
 plugin.setting.isactualdate= Calendar default show actual date
-plugin.setting.filtered.issues= The summary filters
+plugin.setting.non.working.issues= Non working issues
 
 plugin.statistics.message= The number of the dates what the query found: 
 plugin.no.dates= No date to display!
