--- a/src/main/resources/i18n/jttp_hu.properties
+++ b/src/main/resources/i18n/jttp_hu.properties
@@ -40,17 +40,18 @@ plugin.submit= Hozz\u00e1ad\u00e1s
 plugin.submit.close= Ment\u00e9s \u00e9s Bez\u00e1r\u00e1s
 plugin.cancel= M\u00e9gse
 plugin.now= Most
-plugin.filtered= Sz\u0171rt
+plugin.real.work= Val\u00f3s Munka
 plugin.dates= D\u00e1tumok
 plugin.search= Keres\u00e9s
 plugin.from= Innent\u0151l 
 plugin.to= Id\u00e1ig
+plugin.reset = Reset
 
 plugin.personal.settings= A plugin szem\u00e9lyes be\u00e1ll\u00edt\u00e1sai.
 plugin.admin.settings= A plugin glob\u00e1lis be\u00e1ll\u00edt\u00e1sai.
 plugin.setting.ispopup= Felugr\u00f3 kalend\u00e1r
 plugin.setting.isactualdate= Aktu\u00e1lis d\u00e1tum mutat\u00e1sa alap\u00e9rtelmezetten
-plugin.setting.filtered.issues= Az \u00f6sszes\u00edt\u00e9s sz\u0171r\u0151 felt\u00e9telei
+plugin.setting.non.working.issues= Nem val\u00f3s munka feladatok 
 
 plugin.statistics.message= A lek\u00e9r\u00e9s \u00e1lltal tal\u00e1lt d\u00e1tumok darabsz\u00e1ma: 
 plugin.no.dates= Nincs megjelen\u00edtend\u0151 d\u00e1tum!
