Fixed settings.vm. checkbox replaced whit radio buttons.

--- a/src/main/resources/i18n/jttp_en.properties
+++ b/src/main/resources/i18n/jttp_en.properties
@@ -49,9 +49,16 @@ plugin.reset = Reset
 
 plugin.personal.settings= The personal settings of the plugin.
 plugin.admin.settings= The global settings of the plugin.
-plugin.setting.ispopup= Popup Calendar
-plugin.setting.isactualdate= Calendar default show actual date
+plugin.setting.ispopup= Calendar appearance
+plugin.setting.isactualdate= Default date
 plugin.setting.non.working.issues= Non working issues
+plugin.setting.popup=Pop-up
+plugin.setting.inline=Inline
+plugin.setting.current=Current Date
+plugin.setting.last=Last Unfilled Date
+plugin.setting.ispopup.help=You can set the calendar appearance. You can use a popup or inline calendar in the Timetracker page.
+plugin.setting.isactualdate.help=You can choose the calendar default date show the current date or the last one week first unfilled day.
+plugin.setting.non.working.issues.help= You can modify the list of the non working issues.
 
 plugin.statistics.message= The number of the dates what the query found: 
 plugin.no.dates= No date to display!
