--- a/src/main/resources/i18n/jttp_hu.properties
+++ b/src/main/resources/i18n/jttp_hu.properties
@@ -49,9 +49,16 @@ plugin.reset = Reset
 
 plugin.personal.settings= A plugin szem\u00e9lyes be\u00e1ll\u00edt\u00e1sai.
 plugin.admin.settings= A plugin glob\u00e1lis be\u00e1ll\u00edt\u00e1sai.
-plugin.setting.ispopup= Felugr\u00f3 kalend\u00e1r
+plugin.setting.ispopup= Kalend\u00e1r megjelen\u00e9se
 plugin.setting.isactualdate= Aktu\u00e1lis d\u00e1tum mutat\u00e1sa alap\u00e9rtelmezetten
-plugin.setting.non.working.issues= Nem val\u00f3s munka feladatok 
+plugin.setting.non.working.issues= Nem val\u00f3s munka feladatok
+plugin.setting.popup=Felugr\u00f3
+plugin.setting.inline=\u00c1lland\u00f3
+plugin.setting.popup=Mai d\u00e1tum
+plugin.setting.inline=Utols\u00f3 kit\u00f6ltetlen d\u00e1tum
+plugin.setting.ispopup.help=Be\u00e1ll\u00edthatod a kalend\u00e1r megjelen\u00edt\u00e9s\u00e9t. Haszn\u00e1lhatsz felugr\u00f3 vagy \u00e1lland\u00f3an l\u00e1that\u00f3 kalend\u00e1rt a Timetrecker oldal\u00e1n.
+plugin.setting.isactualdate.help=Kiv\u00e1laszthatod, hogy a kalend\u00e1r alap\u00e9rtelemzetten az aktu\u00e1lis d\u00e1tumot, vagy az utols\u00f3 egy h\u00e9t els\u0151 ki ntm t\u00f6lt\u00f6tt napj\u00e1t mutassa.
+plugin.setting.non.working.issues.help= M\u00f3dos\u00edthatod a nem val\u00f3s munka issue-k list\u00e1j\u00e1t.
 
 plugin.statistics.message= A lek\u00e9r\u00e9s \u00e1lltal tal\u00e1lt d\u00e1tumok darabsz\u00e1ma: 
 plugin.no.dates= Nincs megjelen\u00edtend\u0151 d\u00e1tum!
