-Added Collector issues settings and function. -Fixed notification mail body. -Note inputfield not lose value. -Fixed create, update, delete worklog error message.

--- a/src/main/resources/i18n/jttp_en.properties
+++ b/src/main/resources/i18n/jttp_en.properties
@@ -52,6 +52,7 @@ plugin.admin.settings= The global settings of the plugin.
 plugin.setting.ispopup= Calendar appearance
 plugin.setting.isactualdate= Default date
 plugin.setting.non.working.issues= Non working issues
+plugin.setting.collector.issues= Collector issues
 plugin.setting.popup=Pop-up
 plugin.setting.inline=Inline
 plugin.setting.current=Current Date
@@ -59,7 +60,9 @@ plugin.setting.last=Last Unfilled Date
 plugin.setting.ispopup.help=You can set the calendar appearance. You can use a popup or inline calendar in the Timetracker page.
 plugin.setting.isactualdate.help=You can choose the calendar default date show the current date or the last one week first unfilled day.
 plugin.setting.non.working.issues.help= You can modify the list of the non working issues.
+plugin.setting.collector.issues.help= You can modify the list of the collector issues.
 
+plugin.exclamation.mark.message=Work was already done but remaining time ran out on non-closed issue
 plugin.statistics.message= The number of the dates what the query found: 
 plugin.no.dates= No date to display!
 plugin.no.worklogs= No data to display!
