- Fixed worklog body null problem. - The collector issues now handle regular expressions. - Properties default collector issues value now .* - Added both type calendar options

--- a/src/main/resources/i18n/jttp_en.properties
+++ b/src/main/resources/i18n/jttp_en.properties
@@ -55,9 +55,10 @@ plugin.setting.non.working.issues= Non working issues
 plugin.setting.collector.issues= Collector issues
 plugin.setting.popup=Pop-up
 plugin.setting.inline=Inline
+plugin.setting.both=Both type of calendar
 plugin.setting.current=Current Date
 plugin.setting.last=Last Unfilled Date
-plugin.setting.ispopup.help=You can set the calendar appearance. You can use a popup or inline calendar in the Timetracker page.
+plugin.setting.ispopup.help=You can set the calendar appearance. You can use a popup, inline calendar or both type in the Timetracker page.
 plugin.setting.isactualdate.help=You can choose the calendar default date show the current date or the last one week first unfilled day.
 plugin.setting.non.working.issues.help= You can modify the list of the non working issues.
 plugin.setting.collector.issues.help= You can modify the list of the collector issues.
