--- a/src/main/resources/i18n/jttp_hu.properties
+++ b/src/main/resources/i18n/jttp_hu.properties
@@ -55,9 +55,10 @@ plugin.setting.non.working.issues= Nem val\u00f3s munka feladatok
 plugin.setting.colelctor.issues= Gy\u0171jt\u0151 feladatok
 plugin.setting.popup=Felugr\u00f3
 plugin.setting.inline=\u00c1lland\u00f3
+plugin.setting.both=Mindk\u00e9t t\u00edpus\u00fa kalend\u00e1r
 plugin.setting.popup=Mai d\u00e1tum
 plugin.setting.inline=Utols\u00f3 kit\u00f6ltetlen d\u00e1tum
-plugin.setting.ispopup.help=Be\u00e1ll\u00edthatod a kalend\u00e1r megjelen\u00edt\u00e9s\u00e9t. Haszn\u00e1lhatsz felugr\u00f3 vagy \u00e1lland\u00f3an l\u00e1that\u00f3 kalend\u00e1rt a Timetrecker oldal\u00e1n.
+plugin.setting.ispopup.help=Be\u00e1ll\u00edthatod a kalend\u00e1r megjelen\u00edt\u00e9s\u00e9t. Haszn\u00e1lhatsz felugr\u00f3, \u00e1lland\u00f3an l\u00e1that\u00f3 vagy mind a k\u00e9t t\u00edpus\u00f3 kalend\u00e1rt a Timetrecker oldal\u00e1n.
 plugin.setting.isactualdate.help=Kiv\u00e1laszthatod, hogy a kalend\u00e1r alap\u00e9rtelemzetten az aktu\u00e1lis d\u00e1tumot, vagy az utols\u00f3 egy h\u00e9t els\u0151 ki ntm t\u00f6lt\u00f6tt napj\u00e1t mutassa.
 plugin.setting.non.working.issues.help= M\u00f3dos\u00edthatod a nem val\u00f3s munka issue-k list\u00e1j\u00e1t.
 plugin.setting.collector.issues.help= M\u00f3dos\u00edthatod a gy\u0171jt\u0151 feladatok list\u00e1j\u00e1t.
