-no more properties file -non-working use regex -exclude and include date from settigns -email sender from mail server -Fixed css in jttp.vm. -i18n fixed too -basic admin settign added

--- a/src/main/resources/i18n/jttp_en.properties
+++ b/src/main/resources/i18n/jttp_en.properties
@@ -48,20 +48,30 @@ plugin.to= To
 plugin.reset = Reset
 
 plugin.personal.settings= The personal settings of the plugin.
+plugin.setting.calendar.appearance=Calendar appearance
 plugin.admin.settings= The global settings of the plugin.
+plugin.setting.working.day=Working Days
 plugin.setting.ispopup= Calendar appearance
 plugin.setting.isactualdate= Default date
 plugin.setting.non.working.issues= Non working issues
-plugin.setting.collector.issues= Collector issues
+plugin.setting.nonestimated.issues= Non estimted issues
 plugin.setting.popup=Pop-up
 plugin.setting.inline=Inline
 plugin.setting.both=Both type of calendar
 plugin.setting.current=Current Date
 plugin.setting.last=Last Unfilled Date
+plugin.setting.working.day.help=By default all users have to fill at least 8 ours of working time for each working day. In case a user did not work 8 hours a day they should fill a dedicated non-estimated dummy issue. If there is not enough worklog for a day it will be shown in the "Missing worklogs" tab of the plugin. The "Default date" of the "Calendar Appearance" is also calculated based on the working days. All weekdays are working days while all weekends are non-working days by default.
+plugin.setting.exclude.dates=The exclude dates
+plugin.setting.include.dates=The include dates
 plugin.setting.ispopup.help=You can set the calendar appearance. You can use a popup, inline calendar or both type in the Timetracker page.
 plugin.setting.isactualdate.help=You can choose the calendar default date show the current date or the last one week first unfilled day.
-plugin.setting.non.working.issues.help= You can modify the list of the non working issues.
-plugin.setting.collector.issues.help= You can modify the list of the collector issues.
+plugin.setting.non.working.issues.help=The issues that match any of the regular expressions provided in the list will be excluded during calculating "Real work summary".
+plugin.setting.nonestimated.issues.help=By default a mail will be sent every day about non-closed issues where worklog exists but there is no remaining time to the worklog creator, issue reporter and project lead. With this setting administrators can provide a list of regular expressions which issues should be excluded from the check. Examples: If you do not want to get e-mails at all the ".*" setting is for you. If you want to exclude "MYPROJECT" you would define the value "MYPROJECT-.*" in the list.
+plugin.setting.exclude.dates.help=List of days that are weekdays but not working-days (For example: public national holidays).
+plugin.setting.include.dates.help=List of days that are weekends yet working days.
+plugin.parse.exception.exclude=Exception while try to parse the exculde date(s). Bad dates: 
+plugin.parse.exception.include=Exception while try to parse the include date(s). Bad dates: 
+
 
 plugin.exclamation.mark.message=Work was already done but remaining time ran out on non-closed issue
 plugin.statistics.message= The number of the dates what the query found: 
