--- a/src/main/resources/i18n/jttp_hu.properties
+++ b/src/main/resources/i18n/jttp_hu.properties
@@ -52,7 +52,7 @@ plugin.admin.settings= A plugin glob\u00e1lis be\u00e1ll\u00edt\u00e1sai.
 plugin.setting.ispopup= Kalend\u00e1r megjelen\u00e9se
 plugin.setting.isactualdate= Aktu\u00e1lis d\u00e1tum mutat\u00e1sa alap\u00e9rtelmezetten
 plugin.setting.non.working.issues= Nem val\u00f3s munka feladatok
-plugin.setting.colelctor.issues= Gy\u0171jt\u0151 feladatok
+plugin.setting.nonestimated.issues= Becs\u00fcletlen idej\u0171 feladatok
 plugin.setting.popup=Felugr\u00f3
 plugin.setting.inline=\u00c1lland\u00f3
 plugin.setting.both=Mindk\u00e9t t\u00edpus\u00fa kalend\u00e1r
@@ -60,8 +60,8 @@ plugin.setting.popup=Mai d\u00e1tum
 plugin.setting.inline=Utols\u00f3 kit\u00f6ltetlen d\u00e1tum
 plugin.setting.ispopup.help=Be\u00e1ll\u00edthatod a kalend\u00e1r megjelen\u00edt\u00e9s\u00e9t. Haszn\u00e1lhatsz felugr\u00f3, \u00e1lland\u00f3an l\u00e1that\u00f3 vagy mind a k\u00e9t t\u00edpus\u00f3 kalend\u00e1rt a Timetrecker oldal\u00e1n.
 plugin.setting.isactualdate.help=Kiv\u00e1laszthatod, hogy a kalend\u00e1r alap\u00e9rtelemzetten az aktu\u00e1lis d\u00e1tumot, vagy az utols\u00f3 egy h\u00e9t els\u0151 ki ntm t\u00f6lt\u00f6tt napj\u00e1t mutassa.
-plugin.setting.non.working.issues.help= M\u00f3dos\u00edthatod a nem val\u00f3s munka issue-k list\u00e1j\u00e1t.
-plugin.setting.collector.issues.help= M\u00f3dos\u00edthatod a gy\u0171jt\u0151 feladatok list\u00e1j\u00e1t.
+plugin.setting.non.working.issues.help= M\u00f3dos\u00edthatod a nem val\u00f3s munka issue-k list\u00e1j\u00e1t. Haszn\u00e1lhatsz issue kulcsot vagy regul\u00e1sris kifejez\u00e9st. Az itt megadott issue-k nem sz\u00e1m\u00edtanak bele a val\u00f3s munka id\u0151 \u00f6sszes\u00edt\u00e9sbe.
+plugin.setting.nonestimated.issues.help= M\u00f3dos\u00edthatod a meg nem becs\u00fclt idej\u0171 feladatok list\u00e1j\u00e1t. Haszn\u00e1lhatsz issue kulcsot vagy regul\u00e1sris kifejez\u00e9st. Az itt megadott issue-kat figyelembe veszi a plugin a megmaradt becs\u00fclt id\u0151 ellen\u0151rz\u00e9skor amikor a worklog list\u00e1t k\u00e9sz\u00edti vagy amikor a figyelmeztet\u0151 leveleket k\u00fcldi.
 
 plugin.exclamation.mark.message=A H\u00e1tral\u00e9v\u0151 id\u0151 elfogyott a nem lez\u00e1rt feladaton
 plugin.statistics.message= A lek\u00e9r\u00e9s \u00e1lltal tal\u00e1lt d\u00e1tumok darabsz\u00e1ma: 
