Fiexed summary and time input fields design.

--- a/src/main/resources/i18n/jttp_en.properties
+++ b/src/main/resources/i18n/jttp_en.properties
@@ -59,8 +59,8 @@ plugin.setting.both=Both type of calendar
 plugin.setting.current=Current Date
 plugin.setting.last=Last Unfilled Date
 plugin.setting.working.day.help=By default all users have to fill at least 8 ours of working time for each working day. In case a user did not work 8 hours a day they should fill a dedicated non-estimated dummy issue. If there is no worklog for a day it will be shown in the "Missing days" tab of the plugin. The "Default date" of the "Calendar Appearance" is also calculated based on the working days. All weekdays are working days while all weekends are non-working days by default.
-plugin.setting.exclude.dates=The exclude dates
-plugin.setting.include.dates=The include dates
+plugin.setting.exclude.dates=Exclude dates
+plugin.setting.include.dates=Include dates
 plugin.setting.ispopup.help=You can set the calendar appearance. You can use a popup, inline calendar or both type in the Timetracker page.
 plugin.setting.isactualdate.help=You can choose the calendar default date show the current date or the last one week first unfilled day.
 plugin.setting.non.working.issues.help=The issues that match any of the regular expressions provided in the list will be excluded during calculating "Real work summary".
