--- a/src/main/resources/i18n/jttp_en.properties
+++ b/src/main/resources/i18n/jttp_en.properties
@@ -35,7 +35,7 @@ plugin.delete= Delete
 plugin.add.worklog= Add Worklog
 plugin.start.time= Start Time
 plugin.end.time= End Time
-plugin.duration.time = Duration Time
+plugin.duration.time = Duration
 plugin.submit= Submit
 plugin.submit.close= Submit and Close
 plugin.cancel= Cancel
@@ -65,8 +65,8 @@ plugin.setting.ispopup.help=You can set the calendar appearance. You can use a p
 plugin.setting.isactualdate.help=You can choose the calendar default date show the current date or the last one week first unfilled day.
 plugin.setting.non.working.issues.help=The issues that match any of the regular expressions provided in the list will be excluded during calculating "Real work summary".
 plugin.setting.nonestimated.issues.help=By default a mail will be sent every day about non-closed issues where worklog exists but there is no remaining time to the worklog creator, issue reporter and project lead. With this setting administrators can provide a list of regular expressions which issues should be excluded from the check. Examples: If you do not want to get e-mails at all the ".*" setting is for you. If you want to exclude "MYPROJECT" you would define the value "MYPROJECT-.*" in the list.
-plugin.setting.exclude.dates.help=List of days that are weekdays but not working-days (For example: public national holidays).
-plugin.setting.include.dates.help=List of days that are weekends yet working days.
+plugin.setting.exclude.dates.help=List of days that are weekdays but not working-days (For example: public national holidays). The format of the dates yyyy-MM-dd (2013-01-01) and the separator is ",".
+plugin.setting.include.dates.help=List of days that are weekends yet working days. The format of the dates yyyy-MM-dd (2013-01-01) and the separator is ",".
 plugin.parse.exception.exclude=Exception while try to parse the exculde date(s). Wrong dates: 
 plugin.parse.exception.include=Exception while try to parse the include date(s). Wrong dates: 
 
