--- a/src/main/resources/i18n/jttp_en.properties
+++ b/src/main/resources/i18n/jttp_en.properties
@@ -55,7 +55,7 @@ plugin.setting.non.working.issues= Non-working issues
 plugin.setting.nonestimated.issues= Non-estimted issues
 plugin.setting.popup=Pop-up
 plugin.setting.inline=Inline
-plugin.setting.both=Both type of calendar
+plugin.setting.both=Both types of calendars
 plugin.setting.current=Current Date
 plugin.setting.last=Last Unfilled Date
 plugin.setting.working.day.help=By default all users have to fill at least 8 ours of working time for each working day. In case a user did not work 8 hours a day they should fill a dedicated non-estimated dummy issue. If there is no worklog for a day it will be shown in the "Missing days" tab of the plugin. The "Default date" of the "Calendar Appearance" is also calculated based on the working days. All weekdays are working days while all weekends are non-working days by default.
@@ -72,7 +72,7 @@ plugin.parse.exception.include=Exception while try to parse the include date(s).
 
 
 plugin.exclamation.mark.message=Work was already done but remaining time ran out on non-closed issue
-plugin.statistics.message= The number of the dates what the query found: 
+plugin.statistics.message= The number of the queried dates is: 
 plugin.no.dates= No date to display!
 plugin.no.worklogs= No data to display!
 plugin.invalid_startTime= Invalid Start Time!
