The missing days report new feature. Check hours.

--- a/src/main/resources/i18n/jttp_en.properties
+++ b/src/main/resources/i18n/jttp_en.properties
@@ -72,6 +72,8 @@ plugin.parse.exception.include=Exception while try to parse the include date(s).
 
 
 plugin.exclamation.mark.message=Work was already done but remaining time ran out on non-closed issue
+plugin.missing.days.hours=Check the worklog spent time is equal or greater to 8 hours.
+plugin.missing.days.nonworking=Excluding the non-working issues. 
 plugin.statistics.message= The number of the queried dates is: 
 plugin.no.dates= No date to display!
 plugin.no.worklogs= No data to display!
