--- a/src/main/resources/i18n/jttp_hu.properties
+++ b/src/main/resources/i18n/jttp_hu.properties
@@ -71,6 +71,8 @@ plugin.parse.exception.exclude=Hiba t\u00f6rt\u00e9nt a d\u00e1tum feldolgoz\u00
 plugin.parse.exception.include=Hiba t\u00f6rt\u00e9nt a d\u00e1tum feldolgoz\u00e1sa k\u00f6zben. Hib\u00e1s d\u00e1tumok: 
 
 plugin.exclamation.mark.message=A H\u00e1tral\u00e9v\u0151 id\u0151 elfogyott a nem lez\u00e1rt feladaton
+plugin.missing.days.hours=Figyelni, hogy a worklogok \u00f6ssz ideje egyenl\u0151 vagy t\u00f6bb mint 8 \u00f3ra.
+plugin.missing.days.nonworking=Nem val\u00f3s feladatok kiz\u00e1r\u00e1sa. 
 plugin.statistics.message= A lek\u00e9r\u00e9s \u00e1lltal tal\u00e1lt d\u00e1tumok darabsz\u00e1ma: 
 plugin.no.dates= Nincs megjelen\u00edtend\u0151 d\u00e1tum!
 plugin.no.worklogs= Nincs megjelen\u00edtend\u0151 adat!
