Added the calendar logged day coloring function.

--- a/src/main/resources/i18n/jttp_en.properties
+++ b/src/main/resources/i18n/jttp_en.properties
@@ -70,7 +70,6 @@ plugin.setting.include.dates.help=List of days that are weekends yet working day
 plugin.parse.exception.exclude=Exception while try to parse the exculde date(s). Wrong dates: 
 plugin.parse.exception.include=Exception while try to parse the include date(s). Wrong dates: 
 
-
 plugin.exclamation.mark.message=Work was already done but remaining time ran out on non-closed issue
 plugin.missing.days.hours=Check the worklog spent time is equal or greater to 8 hours.
 plugin.missing.days.nonworking=Excluding the non-working issues. 
@@ -89,6 +88,7 @@ plugin.worklog.create.fail= Unsuccessful worklog creation.
 plugin.worklog.delete.fail= Can't delete worklog with this ID:
 plugin.worklog.update.fail= Unsuccessful worklog update.
 plugin.worng.dates= The date parameters of the query are not set appropriate.
+plugin.calendar.logged.coloring.fail= The calendar fail to collet the month logged days.
 
 plugin.worklog.update.success= Success worklog update.
 plugin.worklog.create.success= Success worklog create.
