--- a/src/main/resources/i18n/jttp_hu.properties
+++ b/src/main/resources/i18n/jttp_hu.properties
@@ -88,6 +88,7 @@ plugin.worklog.create.fail= Sikertelen worklog k\u00e9sz\u00edt\u00e9s.
 plugin.worklog.delete.fail= Nem siker\u00fclt t\u00f6r\u00f6lni a worklogot a k\u00f6vetkez\u0151 ID-val:
 plugin.worklog.update.fail= Sikertelen worklog friss\u00edt\u00e9s.
 plugin.worng.dates= A lek\u00e9r\u00e9s d\u00e1tum param\u00e9terei nem megfelel\u0151ek.
+plugin.calendar.logged.coloring.fail= A kalend\u00e1rnak nem siker\u00fclt \u00f6sszegy\u0171jteni a loggal rendelkez\u0151 napokat.
 
 plugin.worklog.update.success= Sikeres worklog szerkeszt\u00e9s.
 plugin.worklog.create.success= Sikeres worklog k\u00e9sz\u00edt\u00e9s.
