Added startTime and endTime value change buttons. The scale of the change can be modify in the user settings.

--- a/src/main/resources/i18n/jttp_en.properties
+++ b/src/main/resources/i18n/jttp_en.properties
@@ -69,6 +69,15 @@ plugin.setting.exclude.dates.help=List of days that are weekdays but not working
 plugin.setting.include.dates.help=List of days that are weekends yet working days. The format of the dates yyyy-MM-dd (2013-01-01) and the separator is ",".
 plugin.parse.exception.exclude=Exception while try to parse the exculde date(s). Wrong dates: 
 plugin.parse.exception.include=Exception while try to parse the include date(s). Wrong dates: 
+plugin.setting.start.time.change.wrong=The startTime change value not correct. The valid values: 1, 5, 10, 15, 20, 30.
+plugin.setting.end.time.change.wrong=The endTime change value not correct. The valid values: 1, 5, 10, 15, 20, 30.
+plugin.settings.time.format=Exception while try to parse the time. Wrong value: 
+plugin.setting.input.fields.settings=Input fields settings
+plugin.setting.starttime.value=StartTime Change value
+plugin.setting.starttime.help=You can set the value of the startTime input fields "<"and ">" buttons. The buttons can decrease or increase the startTime input field value. Acceptable values: 1, 5, 10, 15, 20, 30.
+plugin.setting.endtime.value=EndTime Change value
+plugin.setting.endtime.help=You can set the value of the endTime input fields "<"and ">" buttons. The buttons can decrease or increase the endTime input field value. Acceptable values: 1, 5, 10, 15, 20, 30.
+plugin.setting.min= Minute(s)
 
 plugin.exclamation.mark.message=Work was already done but remaining time ran out on non-closed issue
 plugin.missing.days.hours=Check the worklog spent time is equal or greater to 8 hours.
