Added javadoc. And title to the time change buttons.

--- a/src/main/resources/i18n/jttp_en.properties
+++ b/src/main/resources/i18n/jttp_en.properties
@@ -46,6 +46,10 @@ plugin.search= Search
 plugin.from= From 
 plugin.to= To
 plugin.reset = Reset
+plugin.start.time.dec.title=Decrease the Start Time whit 
+plugin.start.time.inc.title=Increase the Start Time whit 
+plugin.end.time.dec.title=Decrease the End Time whit 
+plugin.end.time.inc.title=Increase the End Time whit 
 
 plugin.setting.calendar.appearance=Calendar appearance
 plugin.setting.working.day=Working Days
