--- a/src/main/resources/i18n/jttp_hu.properties
+++ b/src/main/resources/i18n/jttp_hu.properties
@@ -46,6 +46,10 @@ plugin.search= Keres\u00e9s
 plugin.from= Innent\u0151l 
 plugin.to= Id\u00e1ig
 plugin.reset = Reset
+plugin.start.time.dec.title=Cs\u00f6kkenti a Kezd\u00e9s \u00e9rt\u00e9k\u00e9t
+plugin.start.time.inc.title=N\u00f6veli a Kezd\u00e9s \u00e9rt\u00e9k\u00e9t
+plugin.end.time.dec.title=Cs\u00f6kkenti a V\u00e9ge \u00e9rt\u00e9k\u00e9t 
+plugin.end.time.inc.title=N\u00f6veli a V\u00e9ge \u00e9rt\u00e9k\u00e9t 
 
 plugin.setting.calendar.appearance=Kalend\u00e1r megjelen\u00e9se
 plugin.setting.working.day=Munkanapok
