Calendar coloring function now is depends on the user. (turn on/of)

--- a/src/main/resources/i18n/jttp_en.properties
+++ b/src/main/resources/i18n/jttp_en.properties
@@ -82,6 +82,8 @@ plugin.setting.starttime.help=You can set the value of the startTime input field
 plugin.setting.endtime.value=EndTime Change value
 plugin.setting.endtime.help=You can set the value of the endTime input fields "<"and ">" buttons. The buttons can decrease or increase the endTime input field value. Acceptable values: 1, 5, 10, 15, 20, 30.
 plugin.setting.min= Minute(s)
+plugin.setting.coloring= Highlights
+plugin.setting.coloring.help=You can turn on/off the calendar highlight function. The highlights show the exclude dates like weekends (red number) and the days with worklog (yellow background).  
 
 plugin.exclamation.mark.message=Work was already done but remaining time ran out on non-closed issue
 plugin.missing.days.hours=Check the worklog spent time is equal or greater to 8 hours.
