--- a/src/main/resources/i18n/jttp_hu.properties
+++ b/src/main/resources/i18n/jttp_hu.properties
@@ -82,6 +82,8 @@ plugin.setting.starttime.help=Megadhat\u00f3 a Kezd\u0151 mez\u0151 "<" \u00e9s 
 plugin.setting.endtime.value=V\u00e9ge mez\u0151 \u00e1ll\u00edt\u00e1s\u00e1nak m\u00e9rt\u00e9ke
 plugin.setting.endtime.help=Megadhat\u00f3 a V\u00e9ge mez\u0151 "<" \u00e9s ">" gombjainak \u00e9rt\u00e9ke. A gombok n\u00f6velni \u00e9s cs\u00f6kkenteni tudj\u00e1k a V\u00e9ge mez\u0151 \u00e9rt\u00e9k\u00e9t. Elfogadhat\u00f3 \u00e9rt\u00e9kek: 1, 5, 10, 15, 20, 30.
 plugin.setting.min= perc
+plugin.setting.coloring=Kiemel\u00e9s
+plugin.setting.coloring.help=Ki \u00e9s be kapcsolhatod a kalend\u00e1r kiemel\u0151 funkci\u00f3j\u00e1t. A kiemel\u0151 funcki\u00f3 mutatja a nem munka napnak sz\u00e1m\u00edt\u00f3 napokat h\u00e9tv\u00e9g\u00e9nek megfelel\u0151en (piros sz\u00e1m) \u00e9s a napokat amelyen worklog szerepel (s\u00e1rga h\u00e1tt\u00e9r).
 
 plugin.exclamation.mark.message=A H\u00e1tral\u00e9v\u0151 id\u0151 elfogyott a nem lez\u00e1rt feladaton
 plugin.missing.days.hours=Figyelni, hogy a worklogok \u00f6ssz ideje egyenl\u0151 vagy t\u00f6bb mint 8 \u00f3ra.
