Fixed PluginSettingsValues parameters number, added CalendarSettingsValues dto class. Added tooltip to the worklog list issue collumn.

--- a/src/main/resources/i18n/jttp_hu.properties
+++ b/src/main/resources/i18n/jttp_hu.properties
@@ -50,6 +50,7 @@ plugin.start.time.dec.title=Cs\u00f6kkenti a Kezd\u00e9s \u00e9rt\u00e9k\u00e9t
 plugin.start.time.inc.title=N\u00f6veli a Kezd\u00e9s \u00e9rt\u00e9k\u00e9t
 plugin.end.time.dec.title=Cs\u00f6kkenti a V\u00e9ge \u00e9rt\u00e9k\u00e9t 
 plugin.end.time.inc.title=N\u00f6veli a V\u00e9ge \u00e9rt\u00e9k\u00e9t 
+plugin.parent.issue=Sz\u00fcl\u0151 Issue:
 
 plugin.setting.calendar.appearance=Kalend\u00e1r megjelen\u00e9se
 plugin.setting.working.day=Munkanapok
