--- a/src/main/resources/i18n/jttp_en.properties
+++ b/src/main/resources/i18n/jttp_en.properties
@@ -50,6 +50,7 @@ plugin.start.time.dec.title=Decrease the Start Time whit
 plugin.start.time.inc.title=Increase the Start Time whit 
 plugin.end.time.dec.title=Decrease the End Time whit 
 plugin.end.time.inc.title=Increase the End Time whit 
+plugin.parent.issue=Parent Issue:
 
 plugin.setting.calendar.appearance=Calendar appearance
 plugin.setting.working.day=Working Days
