--- a/src/main/resources/i18n/jttp_en.properties
+++ b/src/main/resources/i18n/jttp_en.properties
@@ -74,14 +74,14 @@ plugin.setting.exclude.dates.help=List of days that are weekdays but not working
 plugin.setting.include.dates.help=List of days that are weekends yet working days. The format of the dates yyyy-MM-dd (2013-01-01) and the separator is ",".
 plugin.parse.exception.exclude=Exception while try to parse the exculde date(s). Wrong dates: 
 plugin.parse.exception.include=Exception while try to parse the include date(s). Wrong dates: 
-plugin.setting.start.time.change.wrong=The startTime change value not correct. The valid values: 1, 5, 10, 15, 20, 30.
-plugin.setting.end.time.change.wrong=The endTime change value not correct. The valid values: 1, 5, 10, 15, 20, 30.
+plugin.setting.start.time.change.wrong=The startTime change value not correct. The valid values: 5, 10, 15, 20, 30.
+plugin.setting.end.time.change.wrong=The endTime change value not correct. The valid values: 5, 10, 15, 20, 30.
 plugin.settings.time.format=Exception while try to parse the time. Wrong value: 
 plugin.setting.input.fields.settings=Input fields settings
 plugin.setting.starttime.value=StartTime Change value
-plugin.setting.starttime.help=You can set the value of the startTime input fields "<"and ">" buttons. The buttons can decrease or increase the startTime input field value. Acceptable values: 1, 5, 10, 15, 20, 30.
+plugin.setting.starttime.help=You can set the value of the startTime input field Now button rounding funcition. Acceptable values: 5, 10, 15, 20, 30.
 plugin.setting.endtime.value=EndTime Change value
-plugin.setting.endtime.help=You can set the value of the endTime input fields "<"and ">" buttons. The buttons can decrease or increase the endTime input field value. Acceptable values: 1, 5, 10, 15, 20, 30.
+plugin.setting.endtime.help=You can set the value of the endTime input field Now button rounding funcition. Acceptable values: 5, 10, 15, 20, 30.
 plugin.setting.min= Minute(s)
 plugin.setting.coloring= Highlights
 plugin.setting.coloring.help=You can turn on/off the calendar highlight function. The highlights show the exclude dates like weekends (red number) and the days with worklog (yellow background).  
