--- a/src/main/resources/i18n/jttp_hu.properties
+++ b/src/main/resources/i18n/jttp_hu.properties
@@ -74,14 +74,14 @@ plugin.setting.exclude.dates.help=H\u00e9tk\u00f6znapok list\u00e1ja amelyek nem
 plugin.setting.include.dates.help=H\u00e9tv\u00e9gi napok list\u00e1ja amelyek munkanapnak sz\u00e1m\u00edtanak. A d\u00e1tumok form\u00e1tuma yyyy-MM-dd (2013-01-01) az elv\u00e1laszt\u00f3jel pedig ",".
 plugin.parse.exception.exclude=Hiba t\u00f6rt\u00e9nt a d\u00e1tum feldolgoz\u00e1sa k\u00f6zben. Hib\u00e1s d\u00e1tumok: 
 plugin.parse.exception.include=Hiba t\u00f6rt\u00e9nt a d\u00e1tum feldolgoz\u00e1sa k\u00f6zben. Hib\u00e1s d\u00e1tumok: 
-plugin.setting.start.time.change.wrong=A Kezd\u0151 mez\u0151t \u00e1ll\u00edt\u00f3 \u00e9rt\u00e9k nem megfelel\u0151. Helyes \u00e9rt\u00e9kek: 1, 5, 10, 15, 20, 30.
-plugin.setting.end.time.change.wrong=A V\u00e9ge mez\u0151t \u00e1ll\u00edt\u00f3 \u00e9rt\u00e9k nem megfelel\u0151. Helyes \u00e9rt\u00e9kek: 1, 5, 10, 15, 20, 30.
+plugin.setting.start.time.change.wrong=A Kezd\u0151 mez\u0151t \u00e1ll\u00edt\u00f3 \u00e9rt\u00e9k nem megfelel\u0151. Helyes \u00e9rt\u00e9kek: 5, 10, 15, 20, 30.
+plugin.setting.end.time.change.wrong=A V\u00e9ge mez\u0151t \u00e1ll\u00edt\u00f3 \u00e9rt\u00e9k nem megfelel\u0151. Helyes \u00e9rt\u00e9kek: 5, 10, 15, 20, 30.
 plugin.settings.time.format=Hiba t\u00f6rt\u00e9nt az id\u0151 feldolgoz\u00e1sa k\u00f6zben. Hib\u00e1s \u00e9rt\u00e9k: 
 plugin.setting.input.fields.settings=beviteli mez\u0151k be\u00e1ll\u00edt\u00e1sa
 plugin.setting.starttime.value=Kezd\u0151 mez\u0151 \u00e1ll\u00edt\u00e1s\u00e1nak m\u00e9rt\u00e9ke
-plugin.setting.starttime.help=Megadhat\u00f3 a Kezd\u0151 mez\u0151 "<" \u00e9s ">" gombjainak \u00e9rt\u00e9ke. A gombok n\u00f6velni \u00e9s cs\u00f6kkenteni tudj\u00e1k a Kezd\u0151 mez\u0151 \u00e9rt\u00e9k\u00e9t. Elfogadhat\u00f3 \u00e9rt\u00e9kek: 1, 5, 10, 15, 20, 30.
+plugin.setting.starttime.help=Megadhat\u00f3 a Kezd\u0151 mez\u0151 Most gombj\u00e1nak kerkek\u00edt\u0151 funkci\u00f3j\u00e1nak \u00e9rt\u00e9ke. Elfogadhat\u00f3 \u00e9rt\u00e9kek: 5, 10, 15, 20, 30.
 plugin.setting.endtime.value=V\u00e9ge mez\u0151 \u00e1ll\u00edt\u00e1s\u00e1nak m\u00e9rt\u00e9ke
-plugin.setting.endtime.help=Megadhat\u00f3 a V\u00e9ge mez\u0151 "<" \u00e9s ">" gombjainak \u00e9rt\u00e9ke. A gombok n\u00f6velni \u00e9s cs\u00f6kkenteni tudj\u00e1k a V\u00e9ge mez\u0151 \u00e9rt\u00e9k\u00e9t. Elfogadhat\u00f3 \u00e9rt\u00e9kek: 1, 5, 10, 15, 20, 30.
+plugin.setting.endtime.help=Megadhat\u00f3 a V\u00e9ge mez\u0151 Most gombj\u00e1nak \u00e9rt\u00e9ke. Elfogadhat\u00f3 \u00e9rt\u00e9kek: 5, 10, 15, 20, 30.
 plugin.setting.min= perc
 plugin.setting.coloring=Kiemel\u00e9s
 plugin.setting.coloring.help=Ki \u00e9s be kapcsolhatod a kalend\u00e1r kiemel\u0151 funkci\u00f3j\u00e1t. A kiemel\u0151 funcki\u00f3 mutatja a nem munka napnak sz\u00e1m\u00edt\u00f3 napokat h\u00e9tv\u00e9g\u00e9nek megfelel\u0151en (piros sz\u00e1m) \u00e9s a napokat amelyen worklog szerepel (s\u00e1rga h\u00e1tt\u00e9r).
