The issuepicker upgrade is in process. i18n hun fixed.

--- a/src/main/resources/i18n/jttp_hu.properties
+++ b/src/main/resources/i18n/jttp_hu.properties
@@ -45,7 +45,7 @@ plugin.dates= D\u00e1tumok
 plugin.search= Keres\u00e9s
 plugin.from= Innent\u0151l 
 plugin.to= Id\u00e1ig
-plugin.reset = Reset
+plugin.reset = T\u00f6rl\u00e9s
 plugin.start.time.dec.title=Cs\u00f6kkenti a Kezd\u00e9s \u00e9rt\u00e9k\u00e9t
 plugin.start.time.inc.title=N\u00f6veli a Kezd\u00e9s \u00e9rt\u00e9k\u00e9t
 plugin.end.time.dec.title=Cs\u00f6kkenti a V\u00e9ge \u00e9rt\u00e9k\u00e9t 
@@ -61,8 +61,8 @@ plugin.setting.nonestimated.issues=Becs\u00fcletlen idej\u0171 feladatok
 plugin.setting.popup=Felugr\u00f3
 plugin.setting.inline=\u00c1lland\u00f3
 plugin.setting.both=Mindk\u00e9t t\u00edpus\u00fa kalend\u00e1r
-plugin.setting.popup=Mai d\u00e1tum
-plugin.setting.inline=Utols\u00f3 kit\u00f6ltetlen d\u00e1tum
+plugin.setting.current=Mai d\u00e1tum
+plugin.setting.last=Utols\u00f3 kit\u00f6ltetlen d\u00e1tum
 plugin.setting.working.day.help=Alap\u00e9rtelmezetten minden felhaszn\u00e1l\u00f3nak 8 \u00f3r\u00e1nyni munk\u00e1val kell kit\u00f6lteni a napokat. Abban az esetben ha a felhaszn\u00f3l\u00f3 nem dolgozik 8 \u00f3r\u00e1t egy nem megbecs\u00fclt dummy issue-val kell kit\u00f6lteni a napot. Ha egy naphoz nem tartotik worklog szerepelni fog a plugin "Missing Days" f\u00fcle alatt. A kalend\u00e1r "Alap\u00e9rtelmezett d\u00e1tum" sz\u00e1m\u00edt\u00e1sa is a munkanapokon alapul. Alap\u00e9rtelmezetten minden h\u00e9tk\u00f6znap munkanapnak \u00e9s minden h\u00e9tv\u00e9ge pihen\u0151 napnak sz\u00e1m\u00edt.
 plugin.setting.exclude.dates=Nem sz\u00e1m\u00edt\u00f3 d\u00e1tumok
 plugin.setting.include.dates=Bele sz\u00e1m\u00edt\u00f3 d\u00e1tumok
@@ -77,7 +77,7 @@ plugin.parse.exception.include=Hiba t\u00f6rt\u00e9nt a d\u00e1tum feldolgoz\u00
 plugin.setting.start.time.change.wrong=A Kezd\u0151 mez\u0151t \u00e1ll\u00edt\u00f3 \u00e9rt\u00e9k nem megfelel\u0151. Helyes \u00e9rt\u00e9kek: 5, 10, 15, 20, 30.
 plugin.setting.end.time.change.wrong=A V\u00e9ge mez\u0151t \u00e1ll\u00edt\u00f3 \u00e9rt\u00e9k nem megfelel\u0151. Helyes \u00e9rt\u00e9kek: 5, 10, 15, 20, 30.
 plugin.settings.time.format=Hiba t\u00f6rt\u00e9nt az id\u0151 feldolgoz\u00e1sa k\u00f6zben. Hib\u00e1s \u00e9rt\u00e9k: 
-plugin.setting.input.fields.settings=beviteli mez\u0151k be\u00e1ll\u00edt\u00e1sa
+plugin.setting.input.fields.settings=Beviteli mez\u0151k be\u00e1ll\u00edt\u00e1sa
 plugin.setting.starttime.value=Kezd\u0151 mez\u0151 \u00e1ll\u00edt\u00e1s\u00e1nak m\u00e9rt\u00e9ke
 plugin.setting.starttime.help=Megadhat\u00f3 a Kezd\u0151 mez\u0151 Most gombj\u00e1nak kerkek\u00edt\u0151 funkci\u00f3j\u00e1nak \u00e9rt\u00e9ke. Elfogadhat\u00f3 \u00e9rt\u00e9kek: 5, 10, 15, 20, 30.
 plugin.setting.endtime.value=V\u00e9ge mez\u0151 \u00e1ll\u00edt\u00e1s\u00e1nak m\u00e9rt\u00e9ke
