fixed issues:  - https://github.com/everit-org/jira-timetracker-plugin/issues/32  - https://github.com/everit-org/jira-timetracker-plugin/issues/22  - https://github.com/everit-org/jira-timetracker-plugin/issues/17  - https://github.com/everit-org/jira-timetracker-plugin/issues/13

--- a/src/main/resources/i18n/jttp_hu.properties
+++ b/src/main/resources/i18n/jttp_hu.properties
@@ -46,6 +46,7 @@ plugin.search= Keres\u00e9s
 plugin.from= Innent\u0151l 
 plugin.to= Id\u00e1ig
 plugin.reset = T\u00f6rl\u00e9s
+plugin.copy = M\u00e1sol\u00e1s
 plugin.start.time.dec.title=Cs\u00f6kkenti a Kezd\u00e9s \u00e9rt\u00e9k\u00e9t
 plugin.start.time.inc.title=N\u00f6veli a Kezd\u00e9s \u00e9rt\u00e9k\u00e9t
 plugin.end.time.dec.title=Cs\u00f6kkenti a V\u00e9ge \u00e9rt\u00e9k\u00e9t 
@@ -85,6 +86,9 @@ plugin.setting.endtime.help=Megadhat\u00f3 a V\u00e9ge mez\u0151 Most gombj\u00e
 plugin.setting.min= perc
 plugin.setting.coloring=Kiemel\u00e9s
 plugin.setting.coloring.help=Ki \u00e9s be kapcsolhatod a kalend\u00e1r kiemel\u0151 funkci\u00f3j\u00e1t. A kiemel\u0151 funcki\u00f3 mutatja a nem munka napnak sz\u00e1m\u00edt\u00f3 napokat h\u00e9tv\u00e9g\u00e9nek megfelel\u0151en (piros sz\u00e1m) \u00e9s a napokat amelyen worklog szerepel (s\u00e1rga h\u00e1tt\u00e9r).
+plugin.setting.fdow=A h\u00e9t els\u0151 napja
+plugin.setting.fdow.sunday=Vas\u00e1rnap
+plugin.setting.fdow.monday=H\u00e9tf\u0151
 
 plugin.exclamation.mark.message=A H\u00e1tral\u00e9v\u0151 id\u0151 elfogyott a nem lez\u00e1rt feladaton
 plugin.missing.days.hours=Figyelni, hogy a worklogok \u00f6ssz ideje egyenl\u0151 vagy t\u00f6bb mint 8 \u00f3ra.
