--- a/src/main/resources/i18n/jttp_en.properties
+++ b/src/main/resources/i18n/jttp_en.properties
@@ -46,6 +46,7 @@ plugin.search= Search
 plugin.from= From 
 plugin.to= To
 plugin.reset = Reset
+plugin.copy = Copy
 plugin.start.time.dec.title=Decrease the Start Time whit 
 plugin.start.time.inc.title=Increase the Start Time whit 
 plugin.end.time.dec.title=Decrease the End Time whit 
@@ -85,6 +86,9 @@ plugin.setting.endtime.help=You can set the value of the endTime input field Now
 plugin.setting.min= Minute(s)
 plugin.setting.coloring= Highlights
 plugin.setting.coloring.help=You can turn on/off the calendar highlight function. The highlights show the exclude dates like weekends (red number) and the days with worklog (yellow background).  
+plugin.setting.fdow=First day of the week
+plugin.setting.fdow.sunday=Sunday
+plugin.setting.fdow.monday=Monday
 
 plugin.exclamation.mark.message=Work was already done but remaining time ran out on non-closed issue
 plugin.missing.days.hours=Check the worklog spent time is equal or greater to 8 hours.
