added chart report page

--- a/src/main/resources/i18n/jttp_en.properties
+++ b/src/main/resources/i18n/jttp_en.properties
@@ -43,10 +43,11 @@ plugin.now= Now
 plugin.real.work= Real Work
 plugin.dates= Dates
 plugin.search= Search
-plugin.from= From 
+plugin.from= From
 plugin.to= To
 plugin.reset = Reset
 plugin.copy = Copy
+plugin.user = User
 plugin.start.time.dec.title=Decrease the Start Time whit 
 plugin.start.time.inc.title=Increase the Start Time whit 
 plugin.end.time.dec.title=Decrease the End Time whit 
@@ -107,7 +108,7 @@ plugin.nopermission_issue= You don't have permission to the issue:
 plugin.worklog.create.fail= Unsuccessful worklog creation.
 plugin.worklog.delete.fail= Can't delete worklog with this ID:
 plugin.worklog.update.fail= Unsuccessful worklog update.
-plugin.worng.dates= The date parameters of the query are not set appropriate.
+plugin.wrong.dates= The date parameters of the query are not set appropriate.
 plugin.calendar.logged.coloring.fail= The calendar fail to collet the month logged days.
 
 plugin.worklog.update.success= Success worklog update.
