--- a/src/main/resources/i18n/jttp_en.properties
+++ b/src/main/resources/i18n/jttp_en.properties
@@ -48,10 +48,10 @@ plugin.to= To
 plugin.reset = Reset
 plugin.copy = Copy
 plugin.user = User
-plugin.start.time.dec.title=Decrease the Start Time whit 
-plugin.start.time.inc.title=Increase the Start Time whit 
-plugin.end.time.dec.title=Decrease the End Time whit 
-plugin.end.time.inc.title=Increase the End Time whit 
+plugin.start.time.dec.title=Decrease the Start Time with 
+plugin.start.time.inc.title=Increase the Start Time with 
+plugin.end.time.dec.title=Decrease the End Time with 
+plugin.end.time.inc.title=Increase the End Time with 
 plugin.parent.issue=Parent Issue:
 
 plugin.setting.calendar.appearance=Calendar appearance
@@ -109,7 +109,7 @@ plugin.worklog.create.fail= Unsuccessful worklog creation.
 plugin.worklog.delete.fail= Can't delete worklog with this ID:
 plugin.worklog.update.fail= Unsuccessful worklog update.
 plugin.wrong.dates= The date parameters of the query are not set appropriate.
-plugin.calendar.logged.coloring.fail= The calendar fail to collet the month logged days.
+plugin.calendar.logged.coloring.fail= The calendar fail to collect the month logged days.
 
 plugin.worklog.update.success= Success worklog update.
 plugin.worklog.create.success= Success worklog create.
