added user picker to chart report page with permission checker added everit logo and some designing fixed bug when the start time did not updated when a worklog was sumbitted

--- a/src/main/resources/i18n/jttp_en.properties
+++ b/src/main/resources/i18n/jttp_en.properties
@@ -110,6 +110,7 @@ plugin.worklog.delete.fail= Can't delete worklog with this ID:
 plugin.worklog.update.fail= Unsuccessful worklog update.
 plugin.wrong.dates= The date parameters of the query are not set appropriate.
 plugin.calendar.logged.coloring.fail= The calendar fail to collect the month logged days.
+plugin.worklog.permission.warning= Maybe there are worklogs matching the conditions but you don't have permission to see them.
 
 plugin.worklog.update.success= Success worklog update.
 plugin.worklog.create.success= Success worklog create.
