admin settings page redesign

--- a/src/main/resources/i18n/jttp_en.properties
+++ b/src/main/resources/i18n/jttp_en.properties
@@ -55,6 +55,8 @@ plugin.end.time.inc.title=Increase the End Time with
 plugin.parent.issue=Parent Issue:
 
 plugin.setting.calendar.appearance=Calendar appearance
+plugin.setting.calendar=Calendar
+plugin.setting.calendar.settings.help=Unified calendar settings for all of the users.
 plugin.setting.working.day=Working Days
 plugin.setting.ispopup=Type
 plugin.setting.isactualdate=Default date
