--- a/src/main/resources/i18n/jttp_hu.properties
+++ b/src/main/resources/i18n/jttp_hu.properties
@@ -55,6 +55,8 @@ plugin.end.time.inc.title=N\u00f6veli a V\u00e9ge \u00e9rt\u00e9k\u00e9t
 plugin.parent.issue=Sz\u00fcl\u0151 Issue:
 
 plugin.setting.calendar.appearance=Kalend\u00e1r megjelen\u00e9se
+plugin.setting.calendar=Kalend\u00e1r
+plugin.setting.calendar.settings.help=Egys\u00e9ges kalend\u00e1r be\u00e1llít\u00e1sok az \u00d6sszes felhaszn\u00e1l\u00f3 sz\u00e1m\u00e1ra.
 plugin.setting.working.day=Munkanapok
 plugin.setting.ispopup=T\u00edpusa
 plugin.setting.isactualdate=Alap\u00e9rtelmezett d\u00e1tum
