Half implemeted user select option for worklog check.

--- a/src/main/resources/i18n/jttp_en.properties
+++ b/src/main/resources/i18n/jttp_en.properties
@@ -113,3 +113,5 @@ plugin.calendar.logged.coloring.fail= The calendar fail to collet the month logg
 plugin.worklog.update.success= Success worklog update.
 plugin.worklog.create.success= Success worklog create.
 plugin.worklog.delete.success= Success worklog delete. The worklog ID:
+
+plugin.user.picker.label=Select User
